# marinero_control

./: .gitignore  README.md  package.xml  setup.cfg  setup.py
marinero_control/: docking_station.py  gazebo_marker.py  marinero_camera.py  marinero_camera_w_joy.py  marinero_camera_w_keyboard.py  marinero_control _old.py  marinero_control.py  marinero_control_navigator.py  marinero_control_with_autonomy.py  marinero_odometry.py  marinero_odometry_new_model.py  marinero_odometry_old_model.py  marinero_teleop.py  marinero_tracker.py  marinero_yolo.py
